fixed label alignment

--- a/packages/quantic/force-app/main/default/lwc/quanticSourceCitations/quanticSourceCitations.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticSourceCitations/quanticSourceCitations.css
@@ -1,7 +1,3 @@
-.source__citations {
-  align-items: center;
-}
-
 .source__citations p {
   min-width: 4.375rem;
 }
